# feednix

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  README.md  TODO  TODO.md  autogen.sh  config.json
cmake/: FindJsonCpp.cmake
src/: CMakeLists.txt  CursesProvider.cpp  CursesProvider.h  FeedlyProvider.cpp  FeedlyProvider.h  Makefile.am  curses_provider.cpp  curses_provider.h  feedly_provider.cpp  feedly_provider.h  main.cpp
